--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@
 body {
     background-color: #fff;
     color: var(--primary-text-color);
+    font-family: Roboto,sans-serif;
+    letter-spacing: 0.03em;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
 }
 .list {
     list-style: none;
@@ -22,6 +27,12 @@ body {
 
 /* site-nav */
 
+.logo {
+    font-family: Raleway,sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+}
 .colorweb {
     color: var(--accent-color);
 }
@@ -35,6 +46,10 @@ body {
 
 .site-nav a {
     color: var(--secondary-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
 }
 .site-nav a.current {
     color: var(--accent-color);
@@ -60,11 +75,40 @@ body {
 }
 .baner-title {
     color: #fff;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 
 /* section */
 .section-title {
     color: var(--secondary-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.title-box {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    text-transform: none;
+}
+
+.title-card {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+}
+.comand-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
 }
 
 /* footer */
@@ -74,10 +118,19 @@ body {
 .contact-footer a {
     color: rgba(255, 255, 255, 0.6);
 }
+.footer-address {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7;
+}
 /* button */
 .button {
     color: #fff;
     background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
 }
 
 /* Portfolio */
